Fixed UX toolbar spacing.

--- a/css/lantern_shark.css
+++ b/css/lantern_shark.css
@@ -161,8 +161,8 @@ body {
   fill: #999;
   height: 30px;
   width: 30px;
-  margin-top: 4px;
-  margin-bottom: 6px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   transform: scale(1.3333);
 }
 
